nivasa-macros/tests/trybuild/validation_custom_validate_missing_arg.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct MissingCustomValidator {
    #[custom_validate()]
    email: String,
}

fn main() {}
